Ajout bouton profil

--- a/public/menu.html
+++ b/public/menu.html
@@ -28,6 +28,7 @@
       <a href="/index.html" id="login-link">login</a>
       <a href="/signup.html" class="sign-up" id="signup-link">sign up</a>
       <a href="/dashboard.html" class="dashboard btn" id="dashboard-link" style="display:none">dashboard</a>
+      <a href="/profile.html" class="profile btn" id="profile-link" style="display:none">profile</a>
       <a href="#" id="logout-link" style="display:none">logout</a>
       <select name="language" id="lang-select">
         <option value="fr">French</option>
