Fix default avatar path and refresh cache

--- a/public/profile.html
+++ b/public/profile.html
@@ -33,7 +33,7 @@
         <input type="file" id="avatar-input" name="avatar" accept="image/*" />
         <button type="submit" class="btn">Télécharger</button>
       </form>
-      <img id="avatar-preview" src="avatars/default.png" alt="Avatar" class="avatar-preview" />
+      <img id="avatar-preview" src="/avatars/default.png" alt="Avatar" class="avatar-preview" />
     </section>
     <section class="card transactions">
       <h2>Transactions</h2>
