--- a/public/profile.html
+++ b/public/profile.html
@@ -23,7 +23,7 @@
       <p><strong>Pays :</strong> <span id="user-country">—</span></p>
       <p><strong>Entreprise :</strong> <span id="user-company">—</span></p>
       <div class="actions">
-        <button class="btn" id="dashboard-btn">Dashboard</button>
+        <button class="btn" id="menu-btn">Menu</button>
         <button class="btn" id="logout-btn">Se déconnecter</button>
       </div>
     </section>
