--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -1,5 +1,6 @@
-<center><h1>Fallait le retenir xd</h1></center>
+<center><h1 data-i18n="forgotTitle">Fallait le retenir xd</h1></center>
 <link rel="icon" href="assets/icon.png" sizes="32x32" type="image/png">
+<script src="/js/utils/i18n.js" defer></script>
 <style>
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
