--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/index.css" type="text/css">
   <link rel="icon" href="assets/icon.png" sizes="32x32" type="image/png">
   <script src="https://cdn.jsdelivr.net/npm/pixi.js@8.9.2/dist/pixi.min.js"></script>
+  <script src="/js/utils/i18n.js" defer></script>
 </head>
 <body>
   <canvas id="candlestick-bg"></canvas>
@@ -17,26 +18,26 @@
       <span class="nerd-hand">☝️</span>
     </div></center>
     <h1>Nerd Society</h1>
-    <h2>Connexion</h2>
+    <h2 data-i18n="loginTitle">Connexion</h2>
 
     <!-- zone d'alerte -->
     <div id="alert"></div>
 
     <form action="/login" method="POST">
       <div class="form-group">
-        <label for="pseudo">Pseudo</label>
-        <input type="text" id="pseudo" name="pseudo" placeholder="Nom d'utilisateur" required />
+        <label for="pseudo" data-i18n="usernameLabel">Pseudo</label>
+        <input type="text" id="pseudo" name="pseudo" placeholder="Nom d'utilisateur" data-i18n-placeholder="usernamePlaceholder" required />
       </div>
       <div class="form-group">
-        <label for="password">Mot de passe</label>
-        <input type="password" id="password" name="password" placeholder="••••••••" required />
+        <label for="password" data-i18n="passwordLabel">Mot de passe</label>
+        <input type="password" id="password" name="password" placeholder="••••••••" data-i18n-placeholder="passwordPlaceholder" required />
       </div>
-      <button type="submit" class="btn">Se connecter</button>
+      <button type="submit" class="btn" data-i18n="loginBtn">Se connecter</button>
     </form>
     <script src="/js/utils/api.js" defer></script>
     <div class="options">
-      <a href="/forgot-password">Mot de passe oublié ?</a>
-      <a href="/signup.html">Créer un compte</a>
+      <a href="/forgot-password" data-i18n="forgot">Mot de passe oublié ?</a>
+      <a href="/signup.html" data-i18n="createAccount">Créer un compte</a>
     </div>
   </div>
   <p class="credit">made and maintained by chatgpt</p>
