--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,7 @@
   <script src="/js/UX/theme_init.js"></script>
   <link rel="stylesheet" href="css/index.css" type="text/css">
   <link rel="icon" href="assets/icon.png" sizes="32x32" type="image/png">
+  <script src="/js/utils/i18n.js" defer></script>
 </head>
 <body>
   <canvas id="candlestick-bg"></canvas>
@@ -16,28 +17,28 @@
       <span class="nerd-hand">☝️</span>
     </div></center>
     <h1>Click Society</h1>
-    <h2>Créer un compte</h2>
+    <h2 data-i18n="signupTitle">Créer un compte</h2>
 
     <!-- zone d'alerte -->
     <div id="alert"></div>
 
     <form action="/signup" method="POST">
       <div class="form-group">
-        <label for="pseudo">Pseudo</label>
-        <input type="text" id="pseudo" name="pseudo" placeholder="Nom d'utilisateur" required />
+        <label for="pseudo" data-i18n="usernameLabel">Pseudo</label>
+        <input type="text" id="pseudo" name="pseudo" placeholder="Nom d'utilisateur" data-i18n-placeholder="usernamePlaceholder" required />
       </div>
         <div class="form-group">
-        <label for="password">Mot de passe</label>
-        <input type="password" id="password" name="password" placeholder="••••••••" required />
+        <label for="password" data-i18n="passwordLabel">Mot de passe</label>
+        <input type="password" id="password" name="password" placeholder="••••••••" data-i18n-placeholder="passwordPlaceholder" required />
       </div>
       <div class="form-group">
         <div class="g-recaptcha" data-sitekey="6LeMsmArAAAAAOZa9yJA1OTa55B52x1P5rfxk8xJ"></div>
       </div>
-      <button type="submit" class="btn">Créer mon compte</button>
+      <button type="submit" class="btn" data-i18n="createAccountBtn">Créer mon compte</button>
     </form>
     <script src="/js/utils/api.js" defer></script>
     <div class="options">
-      <a href="/index.html"><center>Déjà un compte ? Connexion</center></a>
+      <a href="/index.html" data-i18n="already">Déjà un compte ? Connexion</a>
     </div>
   </div>
   <p class="credit">made and maintained by spectra</p>
